--- a/CDCTracking/cdc_track_parameter.html
+++ b/CDCTracking/cdc_track_parameter.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>高能物理探测器几何与径迹</title>
+    <title>COMET CDC Track Parameter</title>
     <style>
         body {
             margin: 0;
